Fixed shadows overflow stacking

--- a/src/WebComponents/Scroller/scroller.scss
+++ b/src/WebComponents/Scroller/scroller.scss
@@ -4,7 +4,6 @@
     overflow: hidden;
     @include layout-horizontal();
     @include relative();
-
     --vi-scroller-thumb-color: #888;
     --vi-scroller-thumb-hover-color: #777;
     --vi-scroller-thumb-size: var(--theme-h5);
@@ -79,7 +78,7 @@
         position: absolute;
         background-color: transparent;
         display: none;
-        z-index: 1;
+        z-index: 99999;
 
         &:before {
             position: absolute;
@@ -198,37 +197,43 @@
         padding-bottom: var(--vi-scroller-thumb-capture-size);
     }
 
-    > .scroll-shadow {
-        position: absolute;
-        -webkit-box-shadow: 0 0 calc(var(--theme-h2) / 2) rgba(0,0,0,0.3);
-        box-shadow: 0 0 calc(var(--theme-h2) / 2) rgba(0,0,0,0.3);
-        bottom: 0;
-        height: var(--theme-h2);
-        -moz-border-radius: 100%;
-        border-radius: 100%;
-        left: calc(var(--theme-h2) * -1);
-        right: calc(var(--theme-h2) * -1);
+    > .shadows {
         pointer-events: none;
+        overflow: hidden;
+        z-index: 999;
 
-        &.top {
-            top: 0;
-            -webkit-transform: translateY(-48px);
-            transform: translateY(calc(var(--theme-h2) * -1.5));
-        }
-
-        &.bottom {
+        > .scroll-shadow {
+            position: absolute;
+            -webkit-box-shadow: 0 0 calc(var(--theme-h2) / 2) rgba(0,0,0,0.3);
+            box-shadow: 0 0 calc(var(--theme-h2) / 2) rgba(0,0,0,0.3);
             bottom: 0;
-            -webkit-transform: translateY(48px);
-            transform: translateY(calc(var(--theme-h2) * 1.5));
+            height: var(--theme-h2);
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+            left: calc(var(--theme-h2) * -1);
+            right: calc(var(--theme-h2) * -1);
+            pointer-events: none;
+
+            &.top {
+                top: 0;
+                -webkit-transform: translateY(-48px);
+                transform: translateY(calc(var(--theme-h2) * -1.5));
+            }
+
+            &.bottom {
+                bottom: 0;
+                -webkit-transform: translateY(48px);
+                transform: translateY(calc(var(--theme-h2) * 1.5));
+            }
         }
     }
 
-    &[scroll-top-shadow] > .scroll-shadow.top {
+    &[scroll-top-shadow] > .shadows > .scroll-shadow.top {
         -webkit-transform: translateY(-32px);
         transform: translateY(calc(var(--theme-h2) * -1));
     }
 
-    &[scroll-bottom-shadow] > .scroll-shadow.bottom {
+    &[scroll-bottom-shadow] > .shadows > .scroll-shadow.bottom {
         -webkit-transform: translateY(32px);
         transform: translateY(var(--theme-h2));
     }
@@ -237,7 +242,6 @@
         > #wrapper::-webkit-scrollbar {
             display: none;
         }
-
         // Edge also reports being webkit
         > #wrapper {
             -ms-overflow-style: none;
